# Vulkan-Renderer

./: .env.cmake  .gitignore  CMakeLists.txt  README.md  unixBuild.sh  visualStudioBuild.bat
shaders/: point_light.frag  point_light.vert  simple_shader.frag  simple_shader.frag.spv  simple_shader.vert  simple_shader.vert.spv  texture_shader.frag  texture_shader.vert
src/: Main.cpp  application.cpp  application.hpp  buffer.cpp  buffer.hpp  camera.cpp  camera.hpp  descriptors.cpp  descriptors.hpp  device.cpp  device.hpp  first_app.cpp  first_app.hpp  frame_info.hpp  game_object.cpp  game_object.hpp  hcore.hpp  imgui.cpp  imgui.hpp  keyboard_movement_controller.cpp  keyboard_movement_controller.hpp  main.cpp  model.cpp  model.hpp  pipeline.cpp  pipeline.hpp  renderer.cpp  renderer.hpp  swap_chain.cpp  swap_chain.hpp  texture.cpp  texture.hpp  vget_buffer.cpp  vget_buffer.hpp  vget_camera.cpp  vget_descriptors.cpp  vget_descriptors.hpp  vget_device.cpp  vget_device.hpp  vget_frame_info.hpp  (+19 more)
src/apps/: Application.cpp  Application.hpp  ImGui.cpp  ImGui.hpp  RMResearchApp.cpp  RMResearchApp.hpp  RMResearchGUI.cpp  RMResearchGUI.hpp  SceneEditorApp.cpp  SceneEditorApp.hpp  SceneEditorGUI.cpp  SceneEditorGUI.hpp  application.cpp  application.hpp
src/apps/common/: KeyboardMovementController.cpp  KeyboardMovementController.hpp
src/renderer/: Buffer.cpp  Buffer.hpp  Camera.cpp  Camera.hpp  Descriptors.cpp  Descriptors.hpp  Device.cpp  Device.hpp  FrameInfo.hpp  GameObject.cpp  GameObject.hpp  HeaderCore.hpp  KeyboardMovementController.cpp  KeyboardMovementController.hpp  Model.cpp  Model.hpp  Pipeline.cpp  Pipeline.hpp  Renderer.cpp  Renderer.hpp  SceneObject.cpp  SceneObject.hpp  ShaderModule.cpp  ShaderModule.hpp  SwapChain.cpp  SwapChain.hpp  Texture.cpp  Texture.hpp  Utils.cpp  Utils.hpp  Window.cpp  Window.hpp  buffer.cpp  camera.cpp  camera.hpp  descriptors.hpp  device.cpp  device.hpp  frame_info.hpp  game_object.hpp  (+18 more)
src/renderer/shaders/: NoTexture.frag  NoTextureLambertian.frag  NoTextureTorranceSparrow.frag  PointLight.vert  SimpleShader.frag  Texture.frag  Texture.vert  TextureLambertian.frag  TextureTorranceSparrow.frag  simple_shader.frag  simple_shader.vert  texture_shader.frag  texture_shader_generated.frag
src/renderer/systems/: PointLightSystem.cpp  PointLightSystem.hpp  SimpleRenderSystem.cpp  SimpleRenderSystem.hpp  TextureRenderSystem.cpp  TextureRenderSystem.hpp  point_light_system.cpp  point_light_system.hpp  simple_render_system.cpp  simple_render_system.hpp  texture_render_system.cpp  texture_render_system.hpp
src/shaders/: NoTexture.vert  NoTextureBlinnPhong.frag  NoTextureLambertian.frag  NoTextureTorranceSparrow.frag  PointLight.frag  TextureBlinnPhong.frag  TextureLambertian.frag  TextureTorranceSparrow.frag
src/systems/: point_light_system.cpp  point_light_system.hpp  simple_render_system.cpp  simple_render_system.hpp  texture_render_system.cpp  texture_render_system.hpp
